--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,11 @@
     <version>4.3.3</version>
     <scope>test</scope>
 </dependency>
-
+<dependency>
+    <groupId>com.github.javafaker</groupId>
+    <artifactId>javafaker</artifactId>
+    <version>1.0.2</version>
+</dependency>
 
 
   </dependencies>
